made sections and list elements functionality - added section and all the elements in .cont functionality - minor css bugs fixed - changed .container flex-wrap from no-wrap to wrap because it looks   better
the only thing left is saves of the (.cont)s

--- a/src/style.css
+++ b/src/style.css
@@ -28,9 +28,9 @@ body{
   min-width: 100%;
   height: 100%;
   padding: 50px;
-  display: grid;
   display: flex;
   gap: 130px;
+  flex-wrap: wrap;
 }
 
 svg{
@@ -57,11 +57,11 @@ svg{
 .add{
   height: 20px;
   width: 100px;
+  min-width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  user-select: none;
 }
 
 /* short for content */
@@ -140,10 +140,80 @@ textarea{
 
 .edit{
   position: relative;
-  left: 6px;
+  left: 8px;
   transition: opacity 0.3s ease-in-out;
 }
 
 .hide{
-  opacity: 0;
+  display: none !important;
+}
+
+.green-border{
+  border-color: #10b981;
+}
+
+.blur{
+  filter: blur(1.3rem);
+  pointer-events: none;
+}
+
+.blur-background{
+  backdrop-filter: blur(1.3rem);
+}
+
+.change-name{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 200px;
+  width: 300px;
+  background-color: #f8fafc;
+  border-radius: 15px;
+  border: 1px solid black;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.name-dialog{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.new-name-inp{
+  max-width: 300px;
+  border-style: none;
+  border-radius: 10px;
+  padding: 5px;
+  height: 1.1rem;
+  overflow-x: scroll;
+  border: 1px solid black;
+}
+
+.bot-dialog{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.bot-dialog > button{
+  padding: 0 8px;
+  width: fit-content;
+  height: 2.4em;
+}
+
+.old-new-comp{
+  font-size: 0.7rem;
+  opacity: 0.8;
+}
+
+.no-select{
+  user-select: none;
 }
